added new components

--- a/src/components/contacts/package.json
+++ b/src/components/contacts/package.json
@@ -1,6 +1,10 @@
 {
     "name": "@com/contacts",
     "version": "1.0.0",
-    "dependencies": {}
-  }
-  
+    "dependencies": {
+        "react-avatar": "^4.0.0",
+        "react-gesture-responder": "^2.1.0",
+        "react-grid-dnd": "^2.1.2",
+        "react-icons": "^4.3.1"
+    }
+}
