--- a/src/components/contacts/package.json
+++ b/src/components/contacts/package.json
@@ -2,9 +2,13 @@
     "name": "@com/contacts",
     "version": "1.0.0",
     "dependencies": {
+        "@emotion/react": "^11.9.0",
+        "@emotion/styled": "^11.8.1",
+        "@mui/material": "^5.6.4",
         "react-avatar": "^4.0.0",
         "react-gesture-responder": "^2.1.0",
         "react-grid-dnd": "^2.1.2",
-        "react-icons": "^4.3.1"
+        "react-icons": "^4.3.1",
+        "react-responsive": "^9.0.0-beta.7"
     }
 }
